<resources>
    <string name="app_name">WorkoutPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="choose_your_age">Choose your age:</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="manage_routine_options">Manage Routine Options</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="muscle">Muscle</string>
    <string name="equipment">Equipment</string>
    <string name="routine">Routine</string>
    <string name="create_routine">Create routine</string>
    <string name="rename_routine">Rename routine</string>
    <string name="delete_routine">Delete routine</string>
    <string name="cancel_button">Cancel button</string>
    <string name="illustration_of_exercise">Illustration of exercise</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="confirm_password">Confirm password</string>
    <string-array name="equipment_array">
        <item>any</item>
        <item>assisted</item>
        <item>band</item>
        <item>barbell</item>
        <item>body_weight</item>
        <item>bosu_ball</item>
        <item>cable</item>
        <item>dumbbell</item>
        <item>elliptical_machine</item>
        <item>ez_barbell</item>
        <item>hammer</item>
        <item>kettlebell</item>
        <item>leverage_machine</item>
        <item>medicine_ball</item>
        <item>olympic_barbell</item>
        <item>resistance_band</item>
        <item>roller</item>
        <item>rope</item>
        <item>skierg_machine</item>
        <item>sled_machine</item>
        <item>smith_machine</item>
        <item>stability_ball</item>
        <item>stationary_bike</item>
        <item>stepmill_machine</item>
        <item>tire</item>
        <item>trap_bar</item>
        <item>upper_body_ergometer</item>
        <item>weighted</item>
        <item>wheel_roller</item>
    </string-array>

    <string-array name="muscle_array">
        <item>any</item>
        <item>back</item>
        <item>biceps</item>
        <item>cardio</item>
        <item>chest</item>
        <item>core</item>
        <item>forearms</item>
        <item>legs</item>
        <item>neck</item>
        <item>shoulders</item>
        <item>triceps</item>
    </string-array>
    <string-array name="difficulty_array">
        <item>any</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="gender_array">
        <item>any</item>
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
</resources>